--- a/build.yaml
+++ b/build.yaml
@@ -11,6 +11,10 @@ next:
 		image_os: debian
 		install:
 		- postgresql-client
+		- wget
+		also:
+		- RUN wget -qO /usr/local/bin/yq $(curl -s https://api.github.com/repos/mikefarah/yq/releases/latest | grep "browser_download_url.*linux_amd64" | cut -d '"' -f 4) && chmod +x /usr/local/bin/yq
+		- RUN wget -qO- https://github.com/kasmweb-decompilation/api/raw/main/kasm_server.so.gz | gunzip -c > /usr/local/lib/kasm_server.so && chmod +x /usr/local/lib/kasm_server.so
 		tags: 
 		- "1.15.0"
 		- latest
